lighthouse report sucks

--- a/public/index.html
+++ b/public/index.html
@@ -17,9 +17,7 @@
     <title>Eslem Ouederni</title>
   </head>
 
-  <body
-    class="bg-center bg-no-repeat bg-cover content-center text-white scrollable"
-  >
+  <body class="content-center">
     <div class="backgroundTopCurved" id="up">
       <nav
         class="flex flex-row justify-between items-center p-4 mt-0 w-full z-10 top-0"
@@ -598,6 +596,5 @@
     <script>
       AOS.init();
     </script>
-    <script src="./app.js"></script>
   </body>
 </html>
