--- a/public/index.html
+++ b/public/index.html
@@ -6,12 +6,7 @@
     <meta name="description" content="This is Isslem Ouederni's Portfolio" />
     <meta name="theme-color" content="#FAA307" />
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-    <link
-      rel="preload"
-      href="./styles.css"
-      as="style"
-      onload="this.onload=null;this.rel='stylesheet'"
-    />
+    <link rel="stylesheet" href="./styles.css" />
     <noscript><link rel="stylesheet" href="./styles.css" /></noscript>
     <link rel="apple-touch-icon" href="./img/maskable_icon_x48.png" />
     <title>Eslem Ouederni</title>
