--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
       >
         <div class="link links">
           <a href="./index.html" class="hidden md:text-2xl md:block"
-            ><span class="text-secondary-200">ESLEM</span> OUEDERNI</a
+            ><span class="text-secondary-200">ISSLEM</span> OUEDERNI</a
           >
           <a href="./index.html" class="text-2xl md:hidden"
             ><span class="text-secondary-200">E</span> O</a
@@ -42,7 +42,7 @@
           <p
             class="text-4xl leading-normal ml-4 font-bold lg:text-7xl md:text-6xl"
           >
-            ESLEM OUEDERNI
+            ISSLEM OUEDERNI
           </p>
           <p class="text-2xl ml-4 mt-4 md:text-3xl lg:text-4xl">
             developer<span class="text-secondary-200">,</span> student<span
@@ -82,16 +82,16 @@
           </div>
           <div class="mt-8 mb-8 flex justify-center md:justify-start">
             <p class="introduction w-min">
-              Hello, I'm Eslem ! welcome to my portfolio. I'm passionate about
-              web
-              <span class="font-serif">& </span>mobile development. I'm a
-              computer science student and a freelance teacher with
+              Welcome to my portfolio! I'm Isslem, a dedicated enthusiast of web
+              <span class="font-serif">& </span>mobile development. With
+              experience contributing to impactful projects, I currently serve
+              as a web developer at
               <a
                 class="link-undeline"
-                href="https://codefirstgirls.com/"
-                aria-label="Code First Girls website"
+                href="https://intermediakt.org/"
+                aria-label="InterMediaKT NGO website"
               >
-                Code First Girls</a
+                InterMediaKT</a
               >.
             </p>
           </div>
@@ -173,6 +173,30 @@
             <div class="experience">
               <div class="title">
                 <h2 class="text-3xl text-secondary-200">Experience</h2>
+              </div>
+              <div class="2022 flex flex-row">
+                <div>
+                  <p class="text-secondary-200 font-medium mr-4">Present</p>
+                </div>
+                <div>
+                  <p class="leading-10 text-xl">
+                    Web developer <br /><span class="text-sm"
+                      >InterMediaKT</span
+                    >
+                  </p>
+                </div>
+              </div>
+              <div class="2022 flex flex-row mt-4">
+                <div>
+                  <p class="text-secondary-200 font-medium mr-4">2023</p>
+                </div>
+                <div>
+                  <p class="leading-10 text-xl">
+                    Freelance Fullstack Instructor <br /><span class="text-sm"
+                      >Dwaya</span
+                    >
+                  </p>
+                </div>
               </div>
               <div class="2021 flex flex-row">
                 <div>
@@ -518,7 +542,7 @@
           <img class="inline-block" src="./img/coding-svgrepo-com.svg" alt="" />
         </p>
         <p class="text-center text-base align-middle pb-1">
-          © Eslem Ouederni 2022
+          © Isslem Ouederni 2022
         </p>
       </footer>
     </div>
